test/cli/test-generating-policy/data/generate-clusterrolebinding/generated-resource.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: namespace-editor-test1-namespace-creator-sa
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: namespace-editor
subjects:
  - kind: ServiceAccount
    name: namespace-creator-sa
    namespace: test1
