test/cli/test-generating-policy/data/generate-clusterrolebinding/resource.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: namespace-creator-sa
  namespace: test1
  labels:
    xyz/namespace-creator: enabled
