test/cli/test-generating-policy/data/generate-clusterrolebinding/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: generate-clusterrolebinding
policies:
- policy.yaml
resources:
- resource.yaml
results:
- generatedResource: generated-resource.yaml
  isGeneratingPolicy: true
  kind: ServiceAccount
  policy: generate-clusterrolebinding
  resources:
  - test1/namespace-creator-sa
  result: pass
